// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Foodprint with WEEK selected with loaded results matches previous snapshot 1`] = `
<MockedProvider
  addTypename={false}
  mocks={
    Array [
      Object {
        "request": Object {
          "query": Object {
            "definitions": Array [
              Object {
                "directives": Array [],
                "kind": "OperationDefinition",
                "name": Object {
                  "kind": "Name",
                  "value": "GetUserHistoryReport",
                },
                "operation": "query",
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "selections": Array [
                    Object {
                      "alias": undefined,
                      "arguments": Array [
                        Object {
                          "kind": "Argument",
                          "name": Object {
                            "kind": "Name",
                            "value": "timezone",
                          },
                          "value": Object {
                            "kind": "Variable",
                            "name": Object {
                              "kind": "Name",
                              "value": "timezone",
                            },
                          },
                        },
                        Object {
                          "kind": "Argument",
                          "name": Object {
                            "kind": "Name",
                            "value": "resolutions",
                          },
                          "value": Object {
                            "kind": "Variable",
                            "name": Object {
                              "kind": "Name",
                              "value": "resolutions",
                            },
                          },
                        },
                      ],
                      "directives": Array [],
                      "kind": "Field",
                      "name": Object {
                        "kind": "Name",
                        "value": "getUserHistoryReport",
                      },
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": undefined,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "userAvg",
                            },
                            "selectionSet": undefined,
                          },
                          Object {
                            "alias": undefined,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "periodAvgs",
                            },
                            "selectionSet": undefined,
                          },
                          Object {
                            "alias": undefined,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "categoryReports",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": undefined,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "plantBased",
                                  },
                                  "selectionSet": Object {
                                    "kind": "SelectionSet",
                                    "selections": Array [
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "periodNumber",
                                        },
                                        "selectionSet": undefined,
                                      },
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "avgCarbonFootprint",
                                        },
                                        "selectionSet": undefined,
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "alias": undefined,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "fish",
                                  },
                                  "selectionSet": Object {
                                    "kind": "SelectionSet",
                                    "selections": Array [
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "periodNumber",
                                        },
                                        "selectionSet": undefined,
                                      },
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "avgCarbonFootprint",
                                        },
                                        "selectionSet": undefined,
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "alias": undefined,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "meat",
                                  },
                                  "selectionSet": Object {
                                    "kind": "SelectionSet",
                                    "selections": Array [
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "periodNumber",
                                        },
                                        "selectionSet": undefined,
                                      },
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "avgCarbonFootprint",
                                        },
                                        "selectionSet": undefined,
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "alias": undefined,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "eggsAndDairy",
                                  },
                                  "selectionSet": Object {
                                    "kind": "SelectionSet",
                                    "selections": Array [
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "periodNumber",
                                        },
                                        "selectionSet": undefined,
                                      },
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "avgCarbonFootprint",
                                        },
                                        "selectionSet": undefined,
                                      },
                                    ],
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
                "variableDefinitions": Array [
                  Object {
                    "defaultValue": undefined,
                    "directives": Array [],
                    "kind": "VariableDefinition",
                    "type": Object {
                      "kind": "NonNullType",
                      "type": Object {
                        "kind": "NamedType",
                        "name": Object {
                          "kind": "Name",
                          "value": "Int",
                        },
                      },
                    },
                    "variable": Object {
                      "kind": "Variable",
                      "name": Object {
                        "kind": "Name",
                        "value": "timezone",
                      },
                    },
                  },
                  Object {
                    "defaultValue": undefined,
                    "directives": Array [],
                    "kind": "VariableDefinition",
                    "type": Object {
                      "kind": "NonNullType",
                      "type": Object {
                        "kind": "ListType",
                        "type": Object {
                          "kind": "NonNullType",
                          "type": Object {
                            "kind": "NamedType",
                            "name": Object {
                              "kind": "Name",
                              "value": "ReportResolution",
                            },
                          },
                        },
                      },
                    },
                    "variable": Object {
                      "kind": "Variable",
                      "name": Object {
                        "kind": "Name",
                        "value": "resolutions",
                      },
                    },
                  },
                ],
              },
            ],
            "kind": "Document",
            "loc": Object {
              "end": 557,
              "start": 0,
            },
          },
        },
        "result": Object {
          "data": Object {
            "getUserHistoryReport": Object {
              "categoryReports": Array [
                Object {
                  "eggsAndDairy": Array [
                    Object {
                      "avgCarbonFootprint": 3.8,
                      "periodNumber": 0,
                    },
                    Object {
                      "avgCarbonFootprint": 3.3,
                      "periodNumber": -1,
                    },
                    Object {
                      "avgCarbonFootprint": 2.85,
                      "periodNumber": -2,
                    },
                    Object {
                      "avgCarbonFootprint": 2.6,
                      "periodNumber": -3,
                    },
                    Object {
                      "avgCarbonFootprint": 2.7,
                      "periodNumber": -4,
                    },
                    Object {
                      "avgCarbonFootprint": 2.6,
                      "periodNumber": -5,
                    },
                  ],
                  "fish": Array [
                    Object {
                      "avgCarbonFootprint": 3.8,
                      "periodNumber": 0,
                    },
                    Object {
                      "avgCarbonFootprint": 2.6,
                      "periodNumber": -1,
                    },
                    Object {
                      "avgCarbonFootprint": 3.3,
                      "periodNumber": -2,
                    },
                    Object {
                      "avgCarbonFootprint": 2.7,
                      "periodNumber": -3,
                    },
                    Object {
                      "avgCarbonFootprint": 2.85,
                      "periodNumber": -4,
                    },
                    Object {
                      "avgCarbonFootprint": 2.6,
                      "periodNumber": -5,
                    },
                  ],
                  "meat": Array [
                    Object {
                      "avgCarbonFootprint": 3.8,
                      "periodNumber": 0,
                    },
                    Object {
                      "avgCarbonFootprint": 3.3,
                      "periodNumber": -1,
                    },
                    Object {
                      "avgCarbonFootprint": 2.85,
                      "periodNumber": -2,
                    },
                    Object {
                      "avgCarbonFootprint": 2.6,
                      "periodNumber": -3,
                    },
                    Object {
                      "avgCarbonFootprint": 2.7,
                      "periodNumber": -4,
                    },
                    Object {
                      "avgCarbonFootprint": 3.3,
                      "periodNumber": -5,
                    },
                  ],
                  "plantBased": Array [
                    Object {
                      "avgCarbonFootprint": 3.8,
                      "periodNumber": 0,
                    },
                    Object {
                      "avgCarbonFootprint": 2.7,
                      "periodNumber": -1,
                    },
                    Object {
                      "avgCarbonFootprint": 3.3,
                      "periodNumber": -2,
                    },
                    Object {
                      "avgCarbonFootprint": 2.85,
                      "periodNumber": -3,
                    },
                    Object {
                      "avgCarbonFootprint": 2.6,
                      "periodNumber": -4,
                    },
                    Object {
                      "avgCarbonFootprint": 3.3,
                      "periodNumber": -5,
                    },
                  ],
                },
                Object {
                  "eggsAndDairy": Array [
                    Object {
                      "avgCarbonFootprint": 13.5,
                      "periodNumber": 0,
                    },
                    Object {
                      "avgCarbonFootprint": 16.5,
                      "periodNumber": -1,
                    },
                    Object {
                      "avgCarbonFootprint": 19,
                      "periodNumber": -2,
                    },
                    Object {
                      "avgCarbonFootprint": 13,
                      "periodNumber": -3,
                    },
                    Object {
                      "avgCarbonFootprint": 14.25,
                      "periodNumber": -4,
                    },
                    Object {
                      "avgCarbonFootprint": 13,
                      "periodNumber": -5,
                    },
                  ],
                  "fish": Array [
                    Object {
                      "avgCarbonFootprint": 13.5,
                      "periodNumber": 0,
                    },
                    Object {
                      "avgCarbonFootprint": 13,
                      "periodNumber": -1,
                    },
                    Object {
                      "avgCarbonFootprint": 16.5,
                      "periodNumber": -2,
                    },
                    Object {
                      "avgCarbonFootprint": 19,
                      "periodNumber": -3,
                    },
                    Object {
                      "avgCarbonFootprint": 14.25,
                      "periodNumber": -4,
                    },
                    Object {
                      "avgCarbonFootprint": 13,
                      "periodNumber": -5,
                    },
                  ],
                  "meat": Array [
                    Object {
                      "avgCarbonFootprint": 13.5,
                      "periodNumber": 0,
                    },
                    Object {
                      "avgCarbonFootprint": 16.5,
                      "periodNumber": -1,
                    },
                    Object {
                      "avgCarbonFootprint": 19,
                      "periodNumber": -2,
                    },
                    Object {
                      "avgCarbonFootprint": 13,
                      "periodNumber": -3,
                    },
                    Object {
                      "avgCarbonFootprint": 14.25,
                      "periodNumber": -4,
                    },
                    Object {
                      "avgCarbonFootprint": 16.5,
                      "periodNumber": -5,
                    },
                  ],
                  "plantBased": Array [
                    Object {
                      "avgCarbonFootprint": 13.5,
                      "periodNumber": 0,
                    },
                    Object {
                      "avgCarbonFootprint": 19,
                      "periodNumber": -1,
                    },
                    Object {
                      "avgCarbonFootprint": 16.5,
                      "periodNumber": -2,
                    },
                    Object {
                      "avgCarbonFootprint": 14.25,
                      "periodNumber": -3,
                    },
                    Object {
                      "avgCarbonFootprint": 13,
                      "periodNumber": -4,
                    },
                    Object {
                      "avgCarbonFootprint": 16.5,
                      "periodNumber": -5,
                    },
                  ],
                },
              ],
              "periodAvgs": Array [
                13.4,
                64,
              ],
              "userAvg": 17.25,
            },
          },
        },
      },
    ]
  }
>
  <Foodprint
    navigation={
      Object {
        "setOptions": [MockFunction],
      }
    }
  />
</MockedProvider>
`;

exports[`foodprint screen with MONTH selected with loaded results matches previous snapshot 1`] = `
<ApolloProvider
  client={
    ApolloClient {
      "cache": InMemoryCache {
        "addTypename": false,
        "cacheKeyRoot": KeyTrie {
          "weakness": true,
        },
        "config": Object {
          "addTypename": false,
          "dataIdFromObject": [Function],
          "fragmentMatcher": HeuristicFragmentMatcher {},
          "freezeResults": false,
          "resultCaching": true,
        },
        "data": DepTrackingCache {
          "data": Object {},
          "depend": [Function],
        },
        "maybeBroadcastWatch": [Function],
        "optimisticData": DepTrackingCache {
          "data": Object {},
          "depend": [Function],
        },
        "silenceBroadcast": false,
        "storeReader": StoreReader {
          "executeSelectionSet": [Function],
          "executeStoreQuery": [Function],
          "executeSubSelectedArray": [Function],
          "freezeResults": false,
        },
        "storeWriter": StoreWriter {},
        "typenameDocumentCache": Map {},
        "watches": Set {},
      },
      "clearStoreCallbacks": Array [],
      "defaultOptions": Object {},
      "disableNetworkFetches": false,
      "link": MockLink {
        "addTypename": false,
        "mockedResponsesByKey": Object {
          "{\\"query\\":\\"query GetUserHistoryReport($timezone: Int!, $resolutions: [ReportResolution!]!) {\\\\n  getUserHistoryReport(timezone: $timezone, resolutions: $resolutions) {\\\\n    userAvg\\\\n    periodAvgs\\\\n    categoryReports {\\\\n      plantBased {\\\\n        periodNumber\\\\n        avgCarbonFootprint\\\\n      }\\\\n      fish {\\\\n        periodNumber\\\\n        avgCarbonFootprint\\\\n      }\\\\n      meat {\\\\n        periodNumber\\\\n        avgCarbonFootprint\\\\n      }\\\\n      eggsAndDairy {\\\\n        periodNumber\\\\n        avgCarbonFootprint\\\\n      }\\\\n    }\\\\n  }\\\\n}\\\\n\\"}": Array [
            Object {
              "request": Object {
                "query": Object {
                  "definitions": Array [
                    Object {
                      "directives": Array [],
                      "kind": "OperationDefinition",
                      "name": Object {
                        "kind": "Name",
                        "value": "GetUserHistoryReport",
                      },
                      "operation": "query",
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": undefined,
                            "arguments": Array [
                              Object {
                                "kind": "Argument",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "timezone",
                                },
                                "value": Object {
                                  "kind": "Variable",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "timezone",
                                  },
                                },
                              },
                              Object {
                                "kind": "Argument",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "resolutions",
                                },
                                "value": Object {
                                  "kind": "Variable",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "resolutions",
                                  },
                                },
                              },
                            ],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "getUserHistoryReport",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": undefined,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "userAvg",
                                  },
                                  "selectionSet": undefined,
                                },
                                Object {
                                  "alias": undefined,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "periodAvgs",
                                  },
                                  "selectionSet": undefined,
                                },
                                Object {
                                  "alias": undefined,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "categoryReports",
                                  },
                                  "selectionSet": Object {
                                    "kind": "SelectionSet",
                                    "selections": Array [
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "plantBased",
                                        },
                                        "selectionSet": Object {
                                          "kind": "SelectionSet",
                                          "selections": Array [
                                            Object {
                                              "alias": undefined,
                                              "arguments": Array [],
                                              "directives": Array [],
                                              "kind": "Field",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "periodNumber",
                                              },
                                              "selectionSet": undefined,
                                            },
                                            Object {
                                              "alias": undefined,
                                              "arguments": Array [],
                                              "directives": Array [],
                                              "kind": "Field",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "avgCarbonFootprint",
                                              },
                                              "selectionSet": undefined,
                                            },
                                          ],
                                        },
                                      },
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "fish",
                                        },
                                        "selectionSet": Object {
                                          "kind": "SelectionSet",
                                          "selections": Array [
                                            Object {
                                              "alias": undefined,
                                              "arguments": Array [],
                                              "directives": Array [],
                                              "kind": "Field",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "periodNumber",
                                              },
                                              "selectionSet": undefined,
                                            },
                                            Object {
                                              "alias": undefined,
                                              "arguments": Array [],
                                              "directives": Array [],
                                              "kind": "Field",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "avgCarbonFootprint",
                                              },
                                              "selectionSet": undefined,
                                            },
                                          ],
                                        },
                                      },
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "meat",
                                        },
                                        "selectionSet": Object {
                                          "kind": "SelectionSet",
                                          "selections": Array [
                                            Object {
                                              "alias": undefined,
                                              "arguments": Array [],
                                              "directives": Array [],
                                              "kind": "Field",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "periodNumber",
                                              },
                                              "selectionSet": undefined,
                                            },
                                            Object {
                                              "alias": undefined,
                                              "arguments": Array [],
                                              "directives": Array [],
                                              "kind": "Field",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "avgCarbonFootprint",
                                              },
                                              "selectionSet": undefined,
                                            },
                                          ],
                                        },
                                      },
                                      Object {
                                        "alias": undefined,
                                        "arguments": Array [],
                                        "directives": Array [],
                                        "kind": "Field",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "eggsAndDairy",
                                        },
                                        "selectionSet": Object {
                                          "kind": "SelectionSet",
                                          "selections": Array [
                                            Object {
                                              "alias": undefined,
                                              "arguments": Array [],
                                              "directives": Array [],
                                              "kind": "Field",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "periodNumber",
                                              },
                                              "selectionSet": undefined,
                                            },
                                            Object {
                                              "alias": undefined,
                                              "arguments": Array [],
                                              "directives": Array [],
                                              "kind": "Field",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "avgCarbonFootprint",
                                              },
                                              "selectionSet": undefined,
                                            },
                                          ],
                                        },
                                      },
                                    ],
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "variableDefinitions": Array [
                        Object {
                          "defaultValue": undefined,
                          "directives": Array [],
                          "kind": "VariableDefinition",
                          "type": Object {
                            "kind": "NonNullType",
                            "type": Object {
                              "kind": "NamedType",
                              "name": Object {
                                "kind": "Name",
                                "value": "Int",
                              },
                            },
                          },
                          "variable": Object {
                            "kind": "Variable",
                            "name": Object {
                              "kind": "Name",
                              "value": "timezone",
                            },
                          },
                        },
                        Object {
                          "defaultValue": undefined,
                          "directives": Array [],
                          "kind": "VariableDefinition",
                          "type": Object {
                            "kind": "NonNullType",
                            "type": Object {
                              "kind": "ListType",
                              "type": Object {
                                "kind": "NonNullType",
                                "type": Object {
                                  "kind": "NamedType",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "ReportResolution",
                                  },
                                },
                              },
                            },
                          },
                          "variable": Object {
                            "kind": "Variable",
                            "name": Object {
                              "kind": "Name",
                              "value": "resolutions",
                            },
                          },
                        },
                      ],
                    },
                  ],
                  "kind": "Document",
                  "loc": Object {
                    "end": 557,
                    "start": 0,
                  },
                },
              },
              "result": Object {
                "data": Object {
                  "getUserHistoryReport": Object {
                    "categoryReports": Array [
                      Object {
                        "eggsAndDairy": Array [
                          Object {
                            "avgCarbonFootprint": 3.8,
                            "periodNumber": 0,
                          },
                          Object {
                            "avgCarbonFootprint": 3.3,
                            "periodNumber": -1,
                          },
                          Object {
                            "avgCarbonFootprint": 2.85,
                            "periodNumber": -2,
                          },
                          Object {
                            "avgCarbonFootprint": 2.6,
                            "periodNumber": -3,
                          },
                          Object {
                            "avgCarbonFootprint": 2.7,
                            "periodNumber": -4,
                          },
                          Object {
                            "avgCarbonFootprint": 2.6,
                            "periodNumber": -5,
                          },
                        ],
                        "fish": Array [
                          Object {
                            "avgCarbonFootprint": 3.8,
                            "periodNumber": 0,
                          },
                          Object {
                            "avgCarbonFootprint": 2.6,
                            "periodNumber": -1,
                          },
                          Object {
                            "avgCarbonFootprint": 3.3,
                            "periodNumber": -2,
                          },
                          Object {
                            "avgCarbonFootprint": 2.7,
                            "periodNumber": -3,
                          },
                          Object {
                            "avgCarbonFootprint": 2.85,
                            "periodNumber": -4,
                          },
                          Object {
                            "avgCarbonFootprint": 2.6,
                            "periodNumber": -5,
                          },
                        ],
                        "meat": Array [
                          Object {
                            "avgCarbonFootprint": 3.8,
                            "periodNumber": 0,
                          },
                          Object {
                            "avgCarbonFootprint": 3.3,
                            "periodNumber": -1,
                          },
                          Object {
                            "avgCarbonFootprint": 2.85,
                            "periodNumber": -2,
                          },
                          Object {
                            "avgCarbonFootprint": 2.6,
                            "periodNumber": -3,
                          },
                          Object {
                            "avgCarbonFootprint": 2.7,
                            "periodNumber": -4,
                          },
                          Object {
                            "avgCarbonFootprint": 3.3,
                            "periodNumber": -5,
                          },
                        ],
                        "plantBased": Array [
                          Object {
                            "avgCarbonFootprint": 3.8,
                            "periodNumber": 0,
                          },
                          Object {
                            "avgCarbonFootprint": 2.7,
                            "periodNumber": -1,
                          },
                          Object {
                            "avgCarbonFootprint": 3.3,
                            "periodNumber": -2,
                          },
                          Object {
                            "avgCarbonFootprint": 2.85,
                            "periodNumber": -3,
                          },
                          Object {
                            "avgCarbonFootprint": 2.6,
                            "periodNumber": -4,
                          },
                          Object {
                            "avgCarbonFootprint": 3.3,
                            "periodNumber": -5,
                          },
                        ],
                      },
                      Object {
                        "eggsAndDairy": Array [
                          Object {
                            "avgCarbonFootprint": 13.5,
                            "periodNumber": 0,
                          },
                          Object {
                            "avgCarbonFootprint": 16.5,
                            "periodNumber": -1,
                          },
                          Object {
                            "avgCarbonFootprint": 19,
                            "periodNumber": -2,
                          },
                          Object {
                            "avgCarbonFootprint": 13,
                            "periodNumber": -3,
                          },
                          Object {
                            "avgCarbonFootprint": 14.25,
                            "periodNumber": -4,
                          },
                          Object {
                            "avgCarbonFootprint": 13,
                            "periodNumber": -5,
                          },
                        ],
                        "fish": Array [
                          Object {
                            "avgCarbonFootprint": 13.5,
                            "periodNumber": 0,
                          },
                          Object {
                            "avgCarbonFootprint": 13,
                            "periodNumber": -1,
                          },
                          Object {
                            "avgCarbonFootprint": 16.5,
                            "periodNumber": -2,
                          },
                          Object {
                            "avgCarbonFootprint": 19,
                            "periodNumber": -3,
                          },
                          Object {
                            "avgCarbonFootprint": 14.25,
                            "periodNumber": -4,
                          },
                          Object {
                            "avgCarbonFootprint": 13,
                            "periodNumber": -5,
                          },
                        ],
                        "meat": Array [
                          Object {
                            "avgCarbonFootprint": 13.5,
                            "periodNumber": 0,
                          },
                          Object {
                            "avgCarbonFootprint": 16.5,
                            "periodNumber": -1,
                          },
                          Object {
                            "avgCarbonFootprint": 19,
                            "periodNumber": -2,
                          },
                          Object {
                            "avgCarbonFootprint": 13,
                            "periodNumber": -3,
                          },
                          Object {
                            "avgCarbonFootprint": 14.25,
                            "periodNumber": -4,
                          },
                          Object {
                            "avgCarbonFootprint": 16.5,
                            "periodNumber": -5,
                          },
                        ],
                        "plantBased": Array [
                          Object {
                            "avgCarbonFootprint": 13.5,
                            "periodNumber": 0,
                          },
                          Object {
                            "avgCarbonFootprint": 19,
                            "periodNumber": -1,
                          },
                          Object {
                            "avgCarbonFootprint": 16.5,
                            "periodNumber": -2,
                          },
                          Object {
                            "avgCarbonFootprint": 14.25,
                            "periodNumber": -3,
                          },
                          Object {
                            "avgCarbonFootprint": 13,
                            "periodNumber": -4,
                          },
                          Object {
                            "avgCarbonFootprint": 16.5,
                            "periodNumber": -5,
                          },
                        ],
                      },
                    ],
                    "periodAvgs": Array [
                      13.4,
                      64,
                    ],
                    "userAvg": 17.25,
                  },
                },
              },
            },
          ],
        },
      },
      "localState": LocalState {
        "cache": InMemoryCache {
          "addTypename": false,
          "cacheKeyRoot": KeyTrie {
            "weakness": true,
          },
          "config": Object {
            "addTypename": false,
            "dataIdFromObject": [Function],
            "fragmentMatcher": HeuristicFragmentMatcher {},
            "freezeResults": false,
            "resultCaching": true,
          },
          "data": DepTrackingCache {
            "data": Object {},
            "depend": [Function],
          },
          "maybeBroadcastWatch": [Function],
          "optimisticData": DepTrackingCache {
            "data": Object {},
            "depend": [Function],
          },
          "silenceBroadcast": false,
          "storeReader": StoreReader {
            "executeSelectionSet": [Function],
            "executeStoreQuery": [Function],
            "executeSubSelectedArray": [Function],
            "freezeResults": false,
          },
          "storeWriter": StoreWriter {},
          "typenameDocumentCache": Map {},
          "watches": Set {},
        },
        "client": [Circular],
      },
      "mutate": [Function],
      "query": [Function],
      "queryDeduplication": true,
      "queryManager": QueryManager {
        "assumeImmutableResults": false,
        "clientAwareness": Object {
          "name": undefined,
          "version": undefined,
        },
        "dataStore": DataStore {
          "cache": InMemoryCache {
            "addTypename": false,
            "cacheKeyRoot": KeyTrie {
              "weakness": true,
            },
            "config": Object {
              "addTypename": false,
              "dataIdFromObject": [Function],
              "fragmentMatcher": HeuristicFragmentMatcher {},
              "freezeResults": false,
              "resultCaching": true,
            },
            "data": DepTrackingCache {
              "data": Object {},
              "depend": [Function],
            },
            "maybeBroadcastWatch": [Function],
            "optimisticData": DepTrackingCache {
              "data": Object {},
              "depend": [Function],
            },
            "silenceBroadcast": false,
            "storeReader": StoreReader {
              "executeSelectionSet": [Function],
              "executeStoreQuery": [Function],
              "executeSubSelectedArray": [Function],
              "freezeResults": false,
            },
            "storeWriter": StoreWriter {},
            "typenameDocumentCache": Map {},
            "watches": Set {},
          },
        },
        "fetchQueryRejectFns": Map {},
        "idCounter": 1,
        "inFlightLinkObservables": Map {},
        "link": MockLink {
          "addTypename": false,
          "mockedResponsesByKey": Object {
            "{\\"query\\":\\"query GetUserHistoryReport($timezone: Int!, $resolutions: [ReportResolution!]!) {\\\\n  getUserHistoryReport(timezone: $timezone, resolutions: $resolutions) {\\\\n    userAvg\\\\n    periodAvgs\\\\n    categoryReports {\\\\n      plantBased {\\\\n        periodNumber\\\\n        avgCarbonFootprint\\\\n      }\\\\n      fish {\\\\n        periodNumber\\\\n        avgCarbonFootprint\\\\n      }\\\\n      meat {\\\\n        periodNumber\\\\n        avgCarbonFootprint\\\\n      }\\\\n      eggsAndDairy {\\\\n        periodNumber\\\\n        avgCarbonFootprint\\\\n      }\\\\n    }\\\\n  }\\\\n}\\\\n\\"}": Array [
              Object {
                "request": Object {
                  "query": Object {
                    "definitions": Array [
                      Object {
                        "directives": Array [],
                        "kind": "OperationDefinition",
                        "name": Object {
                          "kind": "Name",
                          "value": "GetUserHistoryReport",
                        },
                        "operation": "query",
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": undefined,
                              "arguments": Array [
                                Object {
                                  "kind": "Argument",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "timezone",
                                  },
                                  "value": Object {
                                    "kind": "Variable",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "timezone",
                                    },
                                  },
                                },
                                Object {
                                  "kind": "Argument",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "resolutions",
                                  },
                                  "value": Object {
                                    "kind": "Variable",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "resolutions",
                                    },
                                  },
                                },
                              ],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "getUserHistoryReport",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "userAvg",
                                    },
                                    "selectionSet": undefined,
                                  },
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "periodAvgs",
                                    },
                                    "selectionSet": undefined,
                                  },
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "categoryReports",
                                    },
                                    "selectionSet": Object {
                                      "kind": "SelectionSet",
                                      "selections": Array [
                                        Object {
                                          "alias": undefined,
                                          "arguments": Array [],
                                          "directives": Array [],
                                          "kind": "Field",
                                          "name": Object {
                                            "kind": "Name",
                                            "value": "plantBased",
                                          },
                                          "selectionSet": Object {
                                            "kind": "SelectionSet",
                                            "selections": Array [
                                              Object {
                                                "alias": undefined,
                                                "arguments": Array [],
                                                "directives": Array [],
                                                "kind": "Field",
                                                "name": Object {
                                                  "kind": "Name",
                                                  "value": "periodNumber",
                                                },
                                                "selectionSet": undefined,
                                              },
                                              Object {
                                                "alias": undefined,
                                                "arguments": Array [],
                                                "directives": Array [],
                                                "kind": "Field",
                                                "name": Object {
                                                  "kind": "Name",
                                                  "value": "avgCarbonFootprint",
                                                },
                                                "selectionSet": undefined,
                                              },
                                            ],
                                          },
                                        },
                                        Object {
                                          "alias": undefined,
                                          "arguments": Array [],
                                          "directives": Array [],
                                          "kind": "Field",
                                          "name": Object {
                                            "kind": "Name",
                                            "value": "fish",
                                          },
                                          "selectionSet": Object {
                                            "kind": "SelectionSet",
                                            "selections": Array [
                                              Object {
                                                "alias": undefined,
                                                "arguments": Array [],
                                                "directives": Array [],
                                                "kind": "Field",
                                                "name": Object {
                                                  "kind": "Name",
                                                  "value": "periodNumber",
                                                },
                                                "selectionSet": undefined,
                                              },
                                              Object {
                                                "alias": undefined,
                                                "arguments": Array [],
                                                "directives": Array [],
                                                "kind": "Field",
                                                "name": Object {
                                                  "kind": "Name",
                                                  "value": "avgCarbonFootprint",
                                                },
                                                "selectionSet": undefined,
                                              },
                                            ],
                                          },
                                        },
                                        Object {
                                          "alias": undefined,
                                          "arguments": Array [],
                                          "directives": Array [],
                                          "kind": "Field",
                                          "name": Object {
                                            "kind": "Name",
                                            "value": "meat",
                                          },
                                          "selectionSet": Object {
                                            "kind": "SelectionSet",
                                            "selections": Array [
                                              Object {
                                                "alias": undefined,
                                                "arguments": Array [],
                                                "directives": Array [],
                                                "kind": "Field",
                                                "name": Object {
                                                  "kind": "Name",
                                                  "value": "periodNumber",
                                                },
                                                "selectionSet": undefined,
                                              },
                                              Object {
                                                "alias": undefined,
                                                "arguments": Array [],
                                                "directives": Array [],
                                                "kind": "Field",
                                                "name": Object {
                                                  "kind": "Name",
                                                  "value": "avgCarbonFootprint",
                                                },
                                                "selectionSet": undefined,
                                              },
                                            ],
                                          },
                                        },
                                        Object {
                                          "alias": undefined,
                                          "arguments": Array [],
                                          "directives": Array [],
                                          "kind": "Field",
                                          "name": Object {
                                            "kind": "Name",
                                            "value": "eggsAndDairy",
                                          },
                                          "selectionSet": Object {
                                            "kind": "SelectionSet",
                                            "selections": Array [
                                              Object {
                                                "alias": undefined,
                                                "arguments": Array [],
                                                "directives": Array [],
                                                "kind": "Field",
                                                "name": Object {
                                                  "kind": "Name",
                                                  "value": "periodNumber",
                                                },
                                                "selectionSet": undefined,
                                              },
                                              Object {
                                                "alias": undefined,
                                                "arguments": Array [],
                                                "directives": Array [],
                                                "kind": "Field",
                                                "name": Object {
                                                  "kind": "Name",
                                                  "value": "avgCarbonFootprint",
                                                },
                                                "selectionSet": undefined,
                                              },
                                            ],
                                          },
                                        },
                                      ],
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                        },
                        "variableDefinitions": Array [
                          Object {
                            "defaultValue": undefined,
                            "directives": Array [],
                            "kind": "VariableDefinition",
                            "type": Object {
                              "kind": "NonNullType",
                              "type": Object {
                                "kind": "NamedType",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "Int",
                                },
                              },
                            },
                            "variable": Object {
                              "kind": "Variable",
                              "name": Object {
                                "kind": "Name",
                                "value": "timezone",
                              },
                            },
                          },
                          Object {
                            "defaultValue": undefined,
                            "directives": Array [],
                            "kind": "VariableDefinition",
                            "type": Object {
                              "kind": "NonNullType",
                              "type": Object {
                                "kind": "ListType",
                                "type": Object {
                                  "kind": "NonNullType",
                                  "type": Object {
                                    "kind": "NamedType",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "ReportResolution",
                                    },
                                  },
                                },
                              },
                            },
                            "variable": Object {
                              "kind": "Variable",
                              "name": Object {
                                "kind": "Name",
                                "value": "resolutions",
                              },
                            },
                          },
                        ],
                      },
                    ],
                    "kind": "Document",
                    "loc": Object {
                      "end": 557,
                      "start": 0,
                    },
                  },
                },
                "result": Object {
                  "data": Object {
                    "getUserHistoryReport": Object {
                      "categoryReports": Array [
                        Object {
                          "eggsAndDairy": Array [
                            Object {
                              "avgCarbonFootprint": 3.8,
                              "periodNumber": 0,
                            },
                            Object {
                              "avgCarbonFootprint": 3.3,
                              "periodNumber": -1,
                            },
                            Object {
                              "avgCarbonFootprint": 2.85,
                              "periodNumber": -2,
                            },
                            Object {
                              "avgCarbonFootprint": 2.6,
                              "periodNumber": -3,
                            },
                            Object {
                              "avgCarbonFootprint": 2.7,
                              "periodNumber": -4,
                            },
                            Object {
                              "avgCarbonFootprint": 2.6,
                              "periodNumber": -5,
                            },
                          ],
                          "fish": Array [
                            Object {
                              "avgCarbonFootprint": 3.8,
                              "periodNumber": 0,
                            },
                            Object {
                              "avgCarbonFootprint": 2.6,
                              "periodNumber": -1,
                            },
                            Object {
                              "avgCarbonFootprint": 3.3,
                              "periodNumber": -2,
                            },
                            Object {
                              "avgCarbonFootprint": 2.7,
                              "periodNumber": -3,
                            },
                            Object {
                              "avgCarbonFootprint": 2.85,
                              "periodNumber": -4,
                            },
                            Object {
                              "avgCarbonFootprint": 2.6,
                              "periodNumber": -5,
                            },
                          ],
                          "meat": Array [
                            Object {
                              "avgCarbonFootprint": 3.8,
                              "periodNumber": 0,
                            },
                            Object {
                              "avgCarbonFootprint": 3.3,
                              "periodNumber": -1,
                            },
                            Object {
                              "avgCarbonFootprint": 2.85,
                              "periodNumber": -2,
                            },
                            Object {
                              "avgCarbonFootprint": 2.6,
                              "periodNumber": -3,
                            },
                            Object {
                              "avgCarbonFootprint": 2.7,
                              "periodNumber": -4,
                            },
                            Object {
                              "avgCarbonFootprint": 3.3,
                              "periodNumber": -5,
                            },
                          ],
                          "plantBased": Array [
                            Object {
                              "avgCarbonFootprint": 3.8,
                              "periodNumber": 0,
                            },
                            Object {
                              "avgCarbonFootprint": 2.7,
                              "periodNumber": -1,
                            },
                            Object {
                              "avgCarbonFootprint": 3.3,
                              "periodNumber": -2,
                            },
                            Object {
                              "avgCarbonFootprint": 2.85,
                              "periodNumber": -3,
                            },
                            Object {
                              "avgCarbonFootprint": 2.6,
                              "periodNumber": -4,
                            },
                            Object {
                              "avgCarbonFootprint": 3.3,
                              "periodNumber": -5,
                            },
                          ],
                        },
                        Object {
                          "eggsAndDairy": Array [
                            Object {
                              "avgCarbonFootprint": 13.5,
                              "periodNumber": 0,
                            },
                            Object {
                              "avgCarbonFootprint": 16.5,
                              "periodNumber": -1,
                            },
                            Object {
                              "avgCarbonFootprint": 19,
                              "periodNumber": -2,
                            },
                            Object {
                              "avgCarbonFootprint": 13,
                              "periodNumber": -3,
                            },
                            Object {
                              "avgCarbonFootprint": 14.25,
                              "periodNumber": -4,
                            },
                            Object {
                              "avgCarbonFootprint": 13,
                              "periodNumber": -5,
                            },
                          ],
                          "fish": Array [
                            Object {
                              "avgCarbonFootprint": 13.5,
                              "periodNumber": 0,
                            },
                            Object {
                              "avgCarbonFootprint": 13,
                              "periodNumber": -1,
                            },
                            Object {
                              "avgCarbonFootprint": 16.5,
                              "periodNumber": -2,
                            },
                            Object {
                              "avgCarbonFootprint": 19,
                              "periodNumber": -3,
                            },
                            Object {
                              "avgCarbonFootprint": 14.25,
                              "periodNumber": -4,
                            },
                            Object {
                              "avgCarbonFootprint": 13,
                              "periodNumber": -5,
                            },
                          ],
                          "meat": Array [
                            Object {
                              "avgCarbonFootprint": 13.5,
                              "periodNumber": 0,
                            },
                            Object {
                              "avgCarbonFootprint": 16.5,
                              "periodNumber": -1,
                            },
                            Object {
                              "avgCarbonFootprint": 19,
                              "periodNumber": -2,
                            },
                            Object {
                              "avgCarbonFootprint": 13,
                              "periodNumber": -3,
                            },
                            Object {
                              "avgCarbonFootprint": 14.25,
                              "periodNumber": -4,
                            },
                            Object {
                              "avgCarbonFootprint": 16.5,
                              "periodNumber": -5,
                            },
                          ],
                          "plantBased": Array [
                            Object {
                              "avgCarbonFootprint": 13.5,
                              "periodNumber": 0,
                            },
                            Object {
                              "avgCarbonFootprint": 19,
                              "periodNumber": -1,
                            },
                            Object {
                              "avgCarbonFootprint": 16.5,
                              "periodNumber": -2,
                            },
                            Object {
                              "avgCarbonFootprint": 14.25,
                              "periodNumber": -3,
                            },
                            Object {
                              "avgCarbonFootprint": 13,
                              "periodNumber": -4,
                            },
                            Object {
                              "avgCarbonFootprint": 16.5,
                              "periodNumber": -5,
                            },
                          ],
                        },
                      ],
                      "periodAvgs": Array [
                        13.4,
                        64,
                      ],
                      "userAvg": 17.25,
                    },
                  },
                },
              },
            ],
          },
        },
        "localState": LocalState {
          "cache": InMemoryCache {
            "addTypename": false,
            "cacheKeyRoot": KeyTrie {
              "weakness": true,
            },
            "config": Object {
              "addTypename": false,
              "dataIdFromObject": [Function],
              "fragmentMatcher": HeuristicFragmentMatcher {},
              "freezeResults": false,
              "resultCaching": true,
            },
            "data": DepTrackingCache {
              "data": Object {},
              "depend": [Function],
            },
            "maybeBroadcastWatch": [Function],
            "optimisticData": DepTrackingCache {
              "data": Object {},
              "depend": [Function],
            },
            "silenceBroadcast": false,
            "storeReader": StoreReader {
              "executeSelectionSet": [Function],
              "executeStoreQuery": [Function],
              "executeSubSelectedArray": [Function],
              "freezeResults": false,
            },
            "storeWriter": StoreWriter {},
            "typenameDocumentCache": Map {},
            "watches": Set {},
          },
          "client": [Circular],
        },
        "mutationStore": MutationStore {
          "store": Object {},
        },
        "onBroadcast": [Function],
        "pollingInfoByQueryId": Map {},
        "queries": Map {},
        "queryDeduplication": true,
        "queryStore": QueryStore {
          "store": Object {},
        },
        "ssrMode": false,
        "transformCache": WeakMap {},
      },
      "reFetchObservableQueries": [Function],
      "resetStore": [Function],
      "resetStoreCallbacks": Array [],
      "store": DataStore {
        "cache": InMemoryCache {
          "addTypename": false,
          "cacheKeyRoot": KeyTrie {
            "weakness": true,
          },
          "config": Object {
            "addTypename": false,
            "dataIdFromObject": [Function],
            "fragmentMatcher": HeuristicFragmentMatcher {},
            "freezeResults": false,
            "resultCaching": true,
          },
          "data": DepTrackingCache {
            "data": Object {},
            "depend": [Function],
          },
          "maybeBroadcastWatch": [Function],
          "optimisticData": DepTrackingCache {
            "data": Object {},
            "depend": [Function],
          },
          "silenceBroadcast": false,
          "storeReader": StoreReader {
            "executeSelectionSet": [Function],
            "executeStoreQuery": [Function],
            "executeSubSelectedArray": [Function],
            "freezeResults": false,
          },
          "storeWriter": StoreWriter {},
          "typenameDocumentCache": Map {},
          "watches": Set {},
        },
      },
      "typeDefs": undefined,
      "version": "2.6.8",
      "watchQuery": [Function],
    }
  }
>
  <Foodprint
    navigation={
      Object {
        "setOptions": [MockFunction],
      }
    }
  />
</ApolloProvider>
`;
